--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,47 +1,56 @@
 {
-    "name": "ororo-search-app",
-    "version": "1.0.0",
-    "description": "Frontend for ororo-search-app",
-    "main": "index.js",
-    "directories": {
-        "test": "test"
-    },
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "dev": "webpack --progress --display-error-details --hide-modules --watch"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/m1neral/ororo-search-app.git"
-    },
-    "author": "Anatoly Ryabov",
-    "license": "ISC",
-    "bugs": {
-        "url": "https://github.com/m1neral/ororo-search-app/issues"
-    },
-    "homepage": "https://github.com/m1neral/ororo-search-app#readme",
-    "devDependencies": {
-        "babel-core": "^6.23.1",
-        "babel-loader": "^6.2.10",
-        "babel-preset-es2015": "^6.22.0",
-        "babel-preset-react": "^6.23.0",
-        "css-loader": "^0.26.1",
-        "style-loader": "^0.13.1",
-        "webpack": "^2.2.1"
-    },
-    "dependencies": {
-        "axios": "^0.15.3",
-        "bootstrap": "^3.3.7",
-        "lodash": "^4.17.4",
-        "react": "^15.4.2",
-        "react-addons-css-transition-group": "^15.4.2",
-        "react-addons-transition-group": "^15.4.2",
-        "react-dom": "^15.4.2",
-        "react-redux": "^5.0.2",
-        "reactstrap": "^4.1.1",
-        "redux": "^3.6.0"
-    },
-    "babel": {
-        "presets": ["react", "es2015"]
-    }
+  "name": "ororo-search-app",
+  "version": "1.0.0",
+  "description": "Frontend for ororo-search-app",
+  "main": "index.js",
+  "directories": {
+    "test": "test"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "webpack --progress --display-error-details --hide-modules --watch"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/m1neral/ororo-search-app.git"
+  },
+  "author": "Anatoly Ryabov",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/m1neral/ororo-search-app/issues"
+  },
+  "homepage": "https://github.com/m1neral/ororo-search-app#readme",
+  "devDependencies": {
+    "babel-core": "^6.23.1",
+    "babel-loader": "^6.2.10",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-react": "^6.23.0",
+    "css-loader": "^0.26.1",
+    "style-loader": "^0.13.1",
+    "webpack": "^2.2.1"
+  },
+  "dependencies": {
+    "axios": "^0.15.3",
+    "bootstrap": "^4.0.0-alpha.6",
+    "lodash": "^4.17.4",
+    "react": "^15.4.2",
+    "react-addons-css-transition-group": "^15.4.2",
+    "react-addons-transition-group": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "react-redux": "^5.0.2",
+    "reactstrap": "^4.1.1",
+    "redux": "^3.6.0",
+    "redux-logger": "^2.8.1",
+    "redux-thunk": "^2.2.0"
+  },
+  "babel": {
+    "presets": [
+      "react",
+      "es2015"
+    ],
+    "plugins": [
+      "transform-object-rest-spread"
+    ]
+  }
 }
