--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,11 +34,13 @@
     "axios": "^0.15.3",
     "bootstrap": "^4.0.0-alpha.6",
     "lodash": "^4.17.4",
+    "nprogress": "^0.2.0",
     "react": "^15.4.2",
     "react-addons-css-transition-group": "^15.4.2",
     "react-addons-transition-group": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.2",
+    "react-select": "v1.0.0-rc.3",
     "reactstrap": "^4.1.1",
     "redux": "^3.6.0",
     "redux-logger": "^2.8.1",
